# DARWIN-RAG-Expr2-Ablation-Study

./: .gitignore  README.md  exp2-retrieval-diagnostics-crt-deck.html  index-paper-lab-light.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-tests.yml
configs/: category_mapping.yaml  experiment.default.yaml  experiment.mlx.yaml
docs/: IMPLEMENTATION-PLAN.md  IMPLEMENTATION-STEPS.md  QUERY-GUIDELINES.md  WORKING-RULES.md
src/darwin_rag_exp2/: __init__.py  cli.py
src/darwin_rag_exp2/api/: __init__.py  app.py  generator.py  logging.py  runtime.py  service.py
src/darwin_rag_exp2/data/: __init__.py  artifacts.py  audit.py  chunking.py  filtering.py  importer.py  schema.py
src/darwin_rag_exp2/evaluation/: __init__.py  pool.py  queries.py  retrieval_analysis.py  retrieval_metrics.py  retrieval_report_html.py
src/darwin_rag_exp2/indexing/: __init__.py  artifacts.py  embedding_artifacts.py  embeddings.py  faiss_store.py  partitions.py
src/darwin_rag_exp2/models/: __init__.py  calibration.py  category_stats.py  classifier.py  crossfit.py  splits.py
src/darwin_rag_exp2/retrieval/: __init__.py  faiss_backend.py  query_classifier.py  query_features.py  routing.py  rrf.py  runner.py  score_merge.py  settings.py  tuning.py  types.py  variants.py
tests/: test_cli_smoke.py
tests/api/: test_app.py  test_cli_serve_api.py  test_dependency_platforms.py  test_generator.py  test_message_service.py  test_runtime.py
tests/data/: test_audit.py  test_chunking.py  test_filtering.py  test_importer.py
tests/evaluation/: test_phase8_cli.py  test_queries.py  test_query_pool.py  test_retrieval_analysis.py  test_retrieval_metrics.py  test_retrieval_report_html.py
tests/indexing/: test_build_indexes.py  test_embeddings.py  test_partitions.py
tests/models/: test_calibration.py  test_category_stats.py  test_classifier_resume.py  test_classifier_smoke.py  test_crossfit_contract.py  test_splits.py
tests/retrieval/: test_cli_primary.py  test_faiss_backend.py  test_primary_runner.py  test_query_classifier.py  test_query_features.py  test_score_merge.py  test_settings.py  test_tuning.py  test_vanilla_rrf_invariance.py  test_variants.py
