[project]
name = "darwin-rag-exp2"
version = "0.1.0"
description = "Reproducible DARWIN-RAG ablation experiment pipeline."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.0",
    "orjson>=3.10",
    "pydantic>=2.10",
    "pyarrow>=17.0",
    "pyyaml>=6.0",
    "transformers>=4.45",
    "typer>=0.15",
]

[project.scripts]
darwin-exp2 = "darwin_rag_exp2.cli:main"

[dependency-groups]
classifier = [
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "torch>=2.5",
]
dev = [
    "pytest>=8.3",
]
indexing = [
    "faiss-cpu>=1.9",
    "sentence-transformers>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/darwin_rag_exp2"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
